fix:adjusts nav z-index

--- a/src/components/shared/Nav/Nav.module.css
+++ b/src/components/shared/Nav/Nav.module.css
@@ -1,6 +1,7 @@
 .container {
-    position: absolute;
-    right: 1rem;
+    position: fixed;
+    z-index: 999;
+    right: 2rem;
     top: 5rem;
     width: 7rem;
     display: flex;
